crates/panache-parser/tests/snapshots/yaml__yaml_suite_96NN__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 96NN/01
input: "foo: |-\n \tbar"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
